--- a/config.env
+++ b/config.env
@@ -3,22 +3,22 @@
 ## Rest of variable can be setup using BOT by /bsetting command
 
 # REQUIRED CONFIG
-BOT_TOKEN = ""
-OWNER_ID = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
+BOT_TOKEN = "6280343062:AAHA55mmPLxkHjKg-wXhNA3vyMBMCMO9dcc"
+OWNER_ID = "5936165586"
+TELEGRAM_API = "29113859"
+TELEGRAM_HASH = "4fa6a1c5696971b5063c05a590f3823f"
 
 # OPTIONAL CONFIG
-GDRIVE_ID = ""
+GDRIVE_ID = "1gCYxb2-MC-5vzUVV4lN95OUz5mUv8Obp"
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 STATUS_UPDATE_INTERVAL = "15"                       
 AUTO_DELETE_MESSAGE_DURATION = "60"       
 AUTO_DELETE_UPLOAD_MESSAGE_DURATION = "60" 
-DATABASE_URL = ""
-AUTHORIZED_CHATS = ""
+DATABASE_URL = "mongodb+srv://cheerschinna:cheerschinna@cluster0.3uonvzt.mongodb.net/?retryWrites=true&w=majority"
+AUTHORIZED_CHATS = "-1001966243518"
 SUDO_USERS = ""
 IGNORE_PENDING_REQUESTS = ""
-IS_TEAM_DRIVE = ""
+IS_TEAM_DRIVE = "True"
 USE_SERVICE_ACCOUNTS = ""
 SA_MAIL = ""                                          # SA Email id To display in USER TD Section
 INDEX_URL = ""                                        # Not end with /
@@ -35,15 +35,15 @@ TGH_THUMB = ""                                        # Give Telegraph URL(graph
 SAFE_MODE = ""                                        # Defaul is false
 
 # TURN ON/OFF FUCTIONS
-LEECH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+LEECH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MIRROR_ENABLED = ""                                   # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 QB_MIRROR_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-WATCH_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
+WATCH_ENABLED = "True"                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 CLONE_ENABLED = ""                                    # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 ANILIST_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 WAYBACK_ENABLED = ""                                  # Default is False (only use by owner/sudo) Make it True (for authorized chats)
 MEDIAINFO_ENABLED = ""                                # Default is False (only use by owner/sudo) Make it True (for authorized chats)
-SET_BOT_COMMANDS = "" 
+SET_BOT_COMMANDS = "True" 
 
 # UPDATE
 UPSTREAM_REPO = "https://github.com/SN-Abdullah-Al-Noman/SN_WZML"
@@ -51,8 +51,8 @@ UPSTREAM_BRANCH = "master"
 UPDATE_PACKAGES = "False"
 
 # PM SUPPORT
-BOT_PM = ""                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
-FORCE_BOT_PM = ""                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
+BOT_PM = "True"                                           # If this True/False any User can Enable/Disable BOT_PM by using Usetting
+FORCE_BOT_PM = "True"                                     # If this True then NO User can Enable/Disable BOT_PM by using Usetting 
 
 # LEECH
 LEECH_LOG = ""                                        # Must be Started with -100xxxxxxx
