--- a/config.env
+++ b/config.env
@@ -84,7 +84,7 @@ GD_INFO = ""
 FSUB_IDS = ""                                         # Each id Should be seperated by Space & ID must be started with -100xxxxxxx
 
 # QBITORRENT
-BASE_URL = ""
+BASE_URL = "https://kosthadu2023.herokuapp.com/"
 WEB_PINCODE = ""
 QB_SEED = ""
 
@@ -141,14 +141,14 @@ FINISHED_PROGRESS_STR = '■'                           # Get Any from https://c
 UN_FINISHED_PROGRESS_STR = '□'                        # Get Any from https://coolsymbol.com
 
 # THEME
-EMOJI_THEME = ""                                      #Default is False
+EMOJI_THEME = "True"                                      #Default is False
 SHOW_LIMITS_IN_STATS = ""                             #Default is false 
 
 # VIEW STYLE
 LIST_MODE = ""                                        # List/Seach Result in Telegraph/Tg_Direct (Default is Telegraph)
 
 # BRANDING
-CREDIT_NAME = "" 
+CREDIT_NAME = "Arun" 
 
 # DYNAMIC IMAGES
 PICS = ""                                             # Add multiple telgraph image links that are seperated by spaces
@@ -170,7 +170,7 @@ IMDB_TEMPLATE = "<b>Title: </b> {title} [{year}]\n<b>Also Known As:</b> {aka}\n<
 # DIFFERENT BOT BUTTONS 
 SAVE_MSG = ""
 DISABLE_DRIVE_LINK = "" 
-VIEW_LINK = ""
+VIEW_LINK = "True"
 SOURCE_LINK = ""
 START_BTN1_NAME = ""
 START_BTN1_URL = ""
